--- a/manage_modal.css
+++ b/manage_modal.css
@@ -23,3 +23,16 @@
     border-radius: 5px;
     border: 1px solid var(--fontGray);
 }
+.form select{
+    width: 80%;
+    height: 40px;
+    margin: 10px;
+    padding: 10px;
+    font-family: var(--baseFont);
+    color: #6a6a6a;
+    border-radius: 5px;
+    border: 1px solid var(--fontGray);
+}
+.modal-body{
+    height: 120%;
+}
