--- a/manage_modal.css
+++ b/manage_modal.css
@@ -97,12 +97,19 @@
 #filter-btn{
     width: 100%;
     height: 40px;
-    background-color: var(--whiteGray);
-    border-radius: 5px;
-    background-color: white;
     margin-bottom: 20px;
     font-family: var(--baseFont);
-    color: #6a6a6a;
-    border: 0.8px solid var(--fontGray);
     font-size: 16px;
+}
+#modal-body-detail-data{
+    display: flex;
+    justify-content: space-between;
+    align-items:baseline !important;
+}
+.label-detail-modal{
+    width: 86% !important;
+    display: flex !important;
+    margin-left: 20px !important;
+    color: var(--fontGray) !important;
+    font-family: var(--baseFont) !important;
 }
