--- a/manage_modal.css
+++ b/manage_modal.css
@@ -101,15 +101,39 @@
     font-family: var(--baseFont);
     font-size: 16px;
 }
-#modal-body-detail-data{
-    display: flex;
-    justify-content: space-between;
-    align-items:baseline !important;
-}
 .label-detail-modal{
     width: 86% !important;
     display: flex !important;
     margin-left: 20px !important;
     color: var(--fontGray) !important;
     font-family: var(--baseFont) !important;
+}
+#detail-second-wrapper,
+#detail-first-wrapper{
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: red;
 }
